# kalshi-polymarket-anomalous-trade-tracker

./: .env.example  .gitignore  LICENSE  README.md
backend/: check_db.py  pyproject.toml  requirements.txt  seed.py  test_poly.py
backend/alembic/: env.py
backend/alembic/versions/: 475c2fb19c19_v2_schemas.py  7d5477527d5e_initial_schema.py
backend/app/: config.py  database.py  main.py  scheduler.py
backend/app/alerting/: dispatcher.py
backend/app/api/: bets.py  calibration.py  markets.py  router.py  traders.py  watchlists.py
backend/app/ingestion/: kalshi.py  polymarket.py
backend/app/models/: __init__.py  anomaly.py  baseline.py  bet.py  calibration.py  market.py  market_match.py  news.py  trader.py  user.py
backend/app/nlp/: news.py  sentiment.py
backend/app/schemas/: __init__.py  anomaly.py  bet.py  calibration.py  market.py  market_match.py  news.py  trader.py  user.py
backend/app/scoring/: anomaly.py  baseline.py  calibration.py  matching.py  reputation.py
frontend/: index.html  package-lock.json
frontend/src/: App.tsx  index.css
frontend/src/components/: DisclaimerBanner.tsx  PlatformBadge.tsx  ScoreRangeBadge.tsx
frontend/src/hooks/: useApi.ts
frontend/src/pages/: BetDetail.tsx  CalibrationView.tsx  Dashboard.tsx  Leaderboard.tsx  Methodology.tsx  Watchlists.tsx
frontend/src/types/: api.ts
